<resources>
    <string name="app_name">BearHacks</string>
    <string name="username">Enter name</string>
    <string name="user_age">Enter Age</string>
    <string name="button_next">login</string>
    <string name="hours_worked">Enter the hours you worked</string>
    <string name="save">SAVE</string>
    <string name="user_hours">Enter hours worked</string>
    <string name="password">Enter password</string>
    <string name="hoursAmount">0</string>
    <string name="graphview">GraphView</string>
    <string name="hours">Hours:</string>
    <string name="add_hours">Add Hours</string>
</resources>
